--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Sea stories, French'
+- GITenberg
 title: 'La mer et les marins
 
   Scènes maritimes'
